--- a/tetrismainwindow.ui
+++ b/tetrismainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1008</width>
+    <width>1063</width>
     <height>819</height>
    </rect>
   </property>
@@ -17,8 +17,8 @@
    <widget class="QLabel" name="image_label">
     <property name="geometry">
      <rect>
-      <x>350</x>
-      <y>420</y>
+      <x>140</x>
+      <y>390</y>
       <width>611</width>
       <height>221</height>
      </rect>
@@ -30,31 +30,18 @@
    <widget class="PaintWidget" name="paintArea" native="true">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>20</y>
+      <x>130</x>
+      <y>30</y>
       <width>621</width>
       <height>281</height>
      </rect>
     </property>
    </widget>
-   <widget class="Line" name="line">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>430</y>
-      <width>118</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="orientation">
-     <enum>Qt::Horizontal</enum>
-    </property>
-   </widget>
    <widget class="QLabel" name="score_label">
     <property name="geometry">
      <rect>
-      <x>130</x>
-      <y>230</y>
+      <x>50</x>
+      <y>220</y>
       <width>21</width>
       <height>17</height>
      </rect>
@@ -63,11 +50,11 @@
      <string>0</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
+   <widget class="QLabel" name="score">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>176</y>
+      <x>30</x>
+      <y>160</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -81,10 +68,10 @@
      <string>Score</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="level">
     <property name="geometry">
      <rect>
-      <x>120</x>
+      <x>30</x>
       <y>310</y>
       <width>67</width>
       <height>17</height>
@@ -94,11 +81,11 @@
      <string>Level</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QLabel" name="lines">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>480</y>
+      <x>30</x>
+      <y>380</y>
       <width>67</width>
       <height>17</height>
      </rect>
@@ -107,13 +94,88 @@
      <string>Lines</string>
     </property>
    </widget>
+   <widget class="QLabel" name="move">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>107</y>
+      <width>121</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Last Move</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="move_label">
+    <property name="geometry">
+     <rect>
+      <x>880</x>
+      <y>150</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>null</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="piece">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>400</y>
+      <width>121</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>18</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Next Piece</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="level_label">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>340</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>0</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="line_label">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>400</y>
+      <width>67</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>0</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1008</width>
+     <width>1063</width>
      <height>22</height>
     </rect>
    </property>
